# h5io

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: automerge.yml  release.yml  tests.yml
ci-helper/: install-miniconda.ps1
conda/h5io/: bld.bat  meta.yaml
doc/: h5io_demo.ipynb
h5io/: __init__.py  _h5io.py  _version.py
h5io/tests/: test_io.py
